# seniverse-py

./: README.md  pyproject.toml  setup.cfg
seniverse/: __init__.py  client.py  exceptions.py  types.py  v4.py
tests/: conftest.py  test_weather_alarm.py  test_weather_daily_forecast.py  test_weather_hourly3h.py  test_weather_hourly_forecast.py  test_weather_hourly_history.py  test_weather_now.py  test_weather_pricipitation_forecast.py
tests/test_v4/: test_precip_minutely.py
