[tool.poetry]
name = "seniverse-py"
version = "0.1.0"
description = "心知天气第三方SDK / seniverse third party sdk for python3"
authors = ["weak_ptr <weak_ptr@outlook.com>"]
license = "MIT"
packages=[
    { include="seniverse" }
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
isort = "^5.8.0"
pylint = "^2.7.2"
mypy = "^0.812"
pytest = "^6.2.2"
tox = "^3.23.0"
tox-pyenv = "^1.1.0"

[tool.autopep8]
max_line_length=120

[tool.tox]
legacy_tox_ini="""
[tox]
envlist=py36,py37,py38,py39
isolated_build=true

[testenv]
deps = pytest
       pytest-dotenv
commands = pytest
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
